# babelgrid

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
client-ts/: next.config.js  package.json
client-ts/app/: layout.tsx  page.tsx
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
dsp-rust/: Cargo.toml  Dockerfile
dsp-rust/src/: dsp.rs  fft.rs  lib.rs  main.rs
grid-python/: Dockerfile  README.md  pyproject.toml
grid-python/babelgrid_grid/: __init__.py  cli.py  mt.py  pipeline.py  real.py  service.py  stt.py  vocab.py
grid-python/tests/: test_grid.py
proto/: protocol.md
scripts/: verify.py
sfu-go/: Dockerfile  go.mod  main.go
sfu-go/internal/config/: config.go
sfu-go/internal/sfu/: sfu.go  sfu_test.go
sfu-go/internal/ws/: ws.go  ws_test.go
