[package]
name = "babelgrid_dsp"
version = "0.1.0"
edition = "2021"
description = "From-scratch DSP (FFT, noise gate, features) for babelgrid"
license = "MIT"

[[bin]]
name = "babelgrid-dsp"
path = "src/main.rs"

[lib]
name = "babelgrid_dsp"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
